--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": [
-    "oclif",
     "oclif-typescript"
-  ]
+  ],
+  "parserOptions": {
+    "warnOnUnsupportedTypeScriptVersion": false
+  }
 }
