--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.0",
     "npm-api": "^1.0.1",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "pretty-print": "^2.0.0"
   },
   "devDependencies": {
     "@oclif/test": "^2",
@@ -49,8 +50,8 @@
     ],
     "topicSeparator": " ",
     "topics": {
-      "hello": {
-        "description": "Say hello to the world and others"
+      "npm": {
+        "description": "NPM registry command line interface"
       }
     }
   },
